qol changes on course page & text entity
